# aid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  READMW.me  aid.sln  aid2.sln  ios_cracker.sln
ABI/account/: register_new.h  third_appleid.cc  third_mailid.cc  third_mailid.h
ABI/afc_internal/: afc_filesystem.cc  afc_filesystem.h  afc_upload.cc  afc_upload.h
ABI/base/: message_hook.cc  message_hook.h  message_loop.h  process_token.cc  windows_hardware.cc  windows_process.cc  windows_version.cc
ABI/cookies/: parsed_cookie.h
ABI/detours/: detours.h  (+1 more)
Include/: aidserv.h
aid/: GenerateRS_client.cc  GenerateRS_client.h  aid.vcxproj  aid.vcxproj.filters  aid.vcxproj.vcxproj.filters  aiddll.h  aiddll.vcxproj  aiddll.vcxproj.filters  apple_auth_device.h  apple_protocol.cc  apple_ssl.cc  apple_ssl.h  apple_support.cc  apple_support.h  atl_dll_main.cc
aid-cli/: aid-cli.cpp  aid-cli.vcxproj  aid-cli.vcxproj.filters
aid2/: ATH.cpp  ATH.h  Afsync.cpp  Afsync.h  CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  HardwareInfo.cpp  HardwareInfo.h  Logger.cpp  Logger.h  RemoteAuth.cpp  RemoteAuth.h  aid2.cpp  aid2.h  aid2.vcxproj  aid2.vcxproj.filters  dllmain.cpp  iOSApplication.cpp  iOSApplication.h  iOSDevice.cpp  iOSDevice.h  iOSDeviceInfo.cpp  iOSDeviceInfo.h
aid2/cpp-base64/: cpp-base64.cpp
aid2/iTunesApi/: helper.cpp  iTunesApi.cpp  iTunesApi.h  simpleApi.cpp  simpleApi.h  unkonwStruct.h
aiddll/: GenerateRS_client.cc  aiddll.cpp  aiddll.vcxproj  aiddll.vcxproj.filters
demo/: demo.cpp  demo.vcxproj  demo.vcxproj.filters
ios_authorized/: ios_authorized.cc  ios_authorized.rc  ios_authorized.vcxproj  ios_authorized.vcxproj.filters  ios_authorizer.aps
ios_authorizer/: ios_authorizer.cc  ios_authorizer.vcxproj  ios_authorizer.vcxproj.filters  resource.h
ios_broker/: atl_dll_main.cc  atl_dll_main.h  ios_broker.vcxproj  ios_broker.vcxproj.filters  pair_connectioned.cc  pair_connectioned.h  pair_device_app.cc  pair_device_app.h  pair_device_disk_usage.cc  pair_device_disk_usage.h  pair_device_mounter.cc  pair_device_mounter.h  pair_device_shutdown.cc  pair_device_shutdown.h  pair_device_snapshot.cc  pair_device_snapshot.h  pair_device_status.cc  pair_device_status.h  pair_device_trust.cc  pair_device_trust.h  pair_downloae_done_plist.cc  pair_downloae_done_plist.h
ios_cracker/: GenerateRS_client.cc  GenerateRS_client.h  aiddll.h  apple_auth_device.cc  apple_connection_device.cc  apple_connection_device.h  apple_protocol.h  atl_dll_main.cc  atl_dll_main.h  ios_cracker.vcxproj  ios_cracker.vcxproj.filters
ios_download/: download_content.cc  download_content.h  downloader.cc  ios_download.aps  ios_download.rc  ios_download.vcxproj  ios_download.vcxproj.filters  resource.h  utf8_form_js.cc  utf8_form_js.h
ios_helper/: atl_dll_main.cc  atl_dll_main.h  go_auth_device.cc  go_auth_device.h  hook_os_info.cc  hook_os_info.h  ios_helper.vcxproj  ios_helper.vcxproj.filters  registed_filter.cc  registed_filter.h  remote_auth_request_impl.cc  remote_auth_request_impl.h
lib/: aidserv.lib  base.lib  diaguids.lib  googleurl.lib  icudt.exp  icudt.lib  icuin.exp  icuin.lib  icuio.exp  icuio.lib  icutest.exp  icutest.lib  icutu.exp  icutu.lib  icuuc.exp  icuuc.lib  libeay32.lib  libzip.lib  ssleay32.lib  zlib.lib
(+178 files in other folders)
